Fix modals frontend

--- a/frontend/public/views/login.html
+++ b/frontend/public/views/login.html
@@ -1,4 +1,4 @@
-<div class="fixed top-0 left-0 w-full overflow-hidden pointer-events-none h-20 z-50">
+<div class="fixed top-0 left-0 w-full overflow-hidden pointer-events-none h-20 z-40">
   <div class="w-full animate-scrollLeft">
     <img src="/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
   </div>
@@ -30,7 +30,7 @@
 			</form>
 			<a href="/api/auth/oauth/login" id="oauth" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mt-2">Log in using your 42 account</a>
 		</div>
-		<dialog class="modal m-2" id="verify2FAModal">
+		<dialog class="modal animate-rainbow" id="verify2FAModal">
 			<div id="2fa-verification-instructions" class="text-left my-6 mx-auto">
 				<h2 class="text-lg font-bold mb-2">2FA verification Instructions</h2>
 				<ol class="list-decimal list-inside">
