--- a/frontend/public/views/matchmaking.html
+++ b/frontend/public/views/matchmaking.html
@@ -1,4 +1,4 @@
-<div class="fixed top-0 left-0 w-full overflow-hidden pointer-events-none h-20 z-50">
+<div class="fixed top-0 left-0 w-full overflow-hidden pointer-events-none h-20 z-40">
     <div class="w-full animate-scrollLeft">
         <img src="/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
     </div>
@@ -20,7 +20,7 @@
                 <button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg">
                     Create Tournament
                 </button>
-                <dialog class="modal m-2" id="roomSettingsModal">
+                <dialog class="modal animate-rainbow" id="roomSettingsModal">
                     <h2>Customize the room</h2>
                     <form onsubmit="" id="gameSettingsForm">
                         <label>Game Size
