--- a/frontend/public/views/matchmaking.html
+++ b/frontend/public/views/matchmaking.html
@@ -27,7 +27,7 @@
                             <input type="number" name="gameSize" value="2" min="2" max="8" required
                                    class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500">
                         </label>
-                        <button type="submit" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mt-2">Submit</button>
+                        <button type="submit" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
                     </form>
                 </dialog>
             </div>
