--- a/frontend/public/views/register.html
+++ b/frontend/public/views/register.html
@@ -15,21 +15,21 @@
 		<div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
 			<p class="text-base sm:text-lg">Register here! ʕ◉ᴥ◉ʔ</p>
 		</div>
-		<div>
-			<form id="registrationForm">
-				<div>
-					<label for="email">Email:</label>
-					<input class="bg-white text-black" type="email" id="email" name="email" required>
+		<div class="flex items-center justify-center w-full z-50">
+			<form id="registrationForm" class="flex flex-col items-center justify-center space-y-4 w-full max-w-sm">
+				<div class="flex flex-col w-full">
+					<label for="email" class="text-left mb-1">Email:</label>
+					<input class="bg-white text-black w-full px-3 py-2 rounded" type="email" id="email" name="email" required>
 				</div>
-				<div>
-					<label for="password">Password:</label>
-					<input class="bg-white text-black" type="password" id="password" name="password" required>
+				<div class="flex flex-col w-full">
+					<label for="password" class="text-left mb-1">Password:</label>
+					<input class="bg-white text-black w-full px-3 py-2 rounded" type="password" id="password" name="password" required>
 				</div>
-				<div>
-					<label for="username">Username:</label>
-					<input class="bg-white text-black" type="text" id="username" name="username" required>
+				<div class="flex flex-col w-full">
+					<label for="username" class="text-left mb-1">Username:</label>
+					<input class="bg-white text-black w-full px-3 py-2 rounded" type="text" id="username" name="username" required>
 				</div>
-				<input type="submit" value="Submit">
+				<input type="submit" value="Submit" class="bg-purple-700 px-4 py-2 rounded hover:bg-purple-950 mt-4">
 			</form>
 		</div>
 		<div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 z-10">
