--- a/frontend/public/views/register.html
+++ b/frontend/public/views/register.html
@@ -29,7 +29,7 @@
 					<label for="username" class="text-left mb-1">Username:</label>
 					<input class="bg-white text-black w-full px-3 py-2 rounded" type="text" id="username" name="username" required>
 				</div>
-				<input type="submit" value="Submit" class="bg-purple-700 px-4 py-2 rounded hover:bg-purple-950 mt-4">
+				<input type="submit" value="Submit" class="px-3 py-2 rounded border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">
 			</form>
 		</div>
 		<div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 z-10">
