--- a/frontend/public/views/matchmaking.html
+++ b/frontend/public/views/matchmaking.html
@@ -14,10 +14,10 @@
         </div>
         <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
             <div class="flex flex-col sm:flex-row justify-center gap-4 mt-8 w-full max-w-2xl">
-                <button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg" id="createRoom">
+                <button class="flex-1 px-6 py-3 border-2 border-blue-500 bg-blue-700 hover:border-purple-500 hover:bg-purple-950 rounded-md text-lg" id="createRoom">
                     Create Match
                 </button>
-                <button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg">
+                <button class="flex-1 px-6 py-3 border-2 border-blue-500 bg-blue-700 hover:border-purple-500 hover:bg-purple-950 rounded-md text-lg">
                     Create Tournament
                 </button>
                 <dialog class="modal animate-rainbow" id="roomSettingsModal">
@@ -27,7 +27,7 @@
                             <input type="number" name="gameSize" value="2" min="2" max="8" required
                                    class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500">
                         </label>
-                        <button type="submit" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
+                        <button type="submit" class="px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
                     </form>
                 </dialog>
             </div>
