--- a/frontend/public/views/matchmaking.html
+++ b/frontend/public/views/matchmaking.html
@@ -38,18 +38,11 @@
 					<button class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mb-2 mt-6 mx-auto" id="close-total-players-modal">Cancel</button>
 				</dialog>
 				<dialog class="modal m-2" id="player-input-modal">
-					<h2>Input players' usernames</h2>
 					<form id="player-input-form">
+						<h2>Usernames:</h2>
 						<div id="player-input-div"></div>
-						<label>Tournament name
-							<input
-								type="text"
-								id="tournament-name"
-								placeholder="Enter a tournament name"
-								required
-								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500">
-						</label>
-						<!-- <div id="tournament-name-div"></div> -->
+						<h2>Tournament name:</h2>
+						<div id="tournament-name-div"></div>
 						<button class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mb-2 mt-6 mx-auto" id="close-player-input-modal">Cancel</button>
 						<button type="submit" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mt-2">Submit</button>
 					</form>
