--- a/frontend/public/views/register.html
+++ b/frontend/public/views/register.html
@@ -26,6 +26,10 @@
 					<input class="bg-white text-black w-full px-3 py-2 rounded" type="password" id="password" name="password" required>
 				</div>
 				<div class="flex flex-col w-full">
+					<label for="confirmPassword" class="text-left mb-1">Confirm Password:</label>
+					<input class="bg-white text-black w-full px-3 py-2 rounded" type="password" id="confirm-password" name="confirm-password" required>
+				</div>
+				<div class="flex flex-col w-full">
 					<label for="username" class="text-left mb-1">Username:</label>
 					<input class="bg-white text-black w-full px-3 py-2 rounded" type="text" id="username" name="username" required>
 				</div>
