feat: Starting to add confirm password validation to user info update form

--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -38,6 +38,10 @@
 							<input type="password" id="newPassword"
 								placeholder="Enter new password" required
 								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"></label>
+						<label>Confirm password
+							<input type="password" id="confirmPassword"
+								placeholder="Confirm new password" required
+								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"></label>
 						<button type="submit" class="px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
 					</form> 
 					<button id="enable-2fa" class="px-3 py-2 sm:text-base rounded-md border-2 border-emerald-500 bg-emerald-700 hover:border-purple-500 hover:bg-purple-950 mt-2">Enable 2fa</button>
