--- a/frontend/public/views/pong.html
+++ b/frontend/public/views/pong.html
@@ -16,6 +16,6 @@
       <!-- depending on how many users, display username and score here -->
     </div>
     <!-- make button quit the game for all users and redirect to rooms page? -->
-    <button id="quitButton" class="px-3 py-2 sm:px-6 sm:py-4 rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950">Quit game</button>
+    <button id="quitButton" class="cursor-pointer px-3 py-2 sm:px-6 sm:py-4 rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950">Quit game</button>
   </div>
 </div>
