--- a/frontend/public/views/home.html
+++ b/frontend/public/views/home.html
@@ -9,8 +9,8 @@
       <img src="https://i.picasion.com/gl/92/kjzM.gif" alt="header gif" class="w-full max-w-[750px] h-auto"/>
     </div>
     <div class="flex flex-col sm:flex-row sm:flex-wrap justify-center items-center gap-4 bg-purple-700 p-4">
-      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="login">Log in</button>
-      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="register">Create account</button>
+      <button class="cursor-pointer px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="login">Log in</button>
+      <button class="cursor-pointer px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="register">Create account</button>
     </div>
     <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
       <h1 class="text-base sm:text-lg">Welcome! To play pong or memory, please log in. ʕ◉ᴥ◉ʔ</h1>
