--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -10,39 +10,39 @@
 			<img src="https://i.picasion.com/gl/92/kjzM.gif" alt="header gif" class="w-full max-w-[750px] h-auto"/>
 		</div>
 		<div class="flex flex-col sm:flex-row sm:flex-wrap justify-center items-center gap-4 bg-purple-700 p-4">
-			<button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="profile">Profile</button>
-			<button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="matchmaking">Play game</button>
-			<button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" id="logout">Log out</button>
+			<button class="cursor-pointer px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="profile">Profile</button>
+			<button class="cursor-pointer px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="matchmaking">Play game</button>
+			<button class="cursor-pointer px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" id="logout">Log out</button>
 		</div>
 		<div class="grid grid-cols-1 sm:grid-cols-2 gap-4 p-4 sm:p-6">
 			<div class="grid grid-cols-2 items-center p-6">
 				<h1 id="username" class="text-base sm:text-lg"></h1>
-				<button id="openUserInfoEditor" class="w-4 h-5 sm:w-5 sm:h-6 md:w-6 md:h-7">
+				<button id="openUserInfoEditor" class="cursor-pointer w-4 h-5 sm:w-5 sm:h-6 md:w-6 md:h-7">
 					<img class="w-full h-full object-contain" src="./assets/gifs/pencil.gif" alt="Edit username or password"/>
 				</button>
 				<dialog class="modal animate-rainbow" id="modal">
 					<h2>Update username, password or avatar</h2>
 					<form id="avatarForm" enctype="multipart/form-data">
-		 				<input type="file" id="avatarInput" accept="image/*" name="avatar" class="sm:text-base rounded-md border-2 border-gray-300">
-						<button type="submit" class="px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Upload</button>
+		 				<input type="file" id="avatarInput" accept="image/*" name="avatar" class="cursor-pointer sm:text-base rounded-md border-2 border-gray-300">
+						<button type="submit" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Upload</button>
 					</form>
 					<form id="usernameForm">
 						<label>New username
 							<input type="text" id="newUsername"
 								placeholder="Enter new username" required
 								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"></label>
-						<button type="submit" class="px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
+						<button type="submit" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
 					</form>
 					<form id="passwordForm">
 						<label>New password
 							<input type="password" id="newPassword"
 								placeholder="Enter new password" required
 								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"></label>
-						<button type="submit" class="px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
+						<button type="submit" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
 					</form> 
-					<button id="enable-2fa" class="px-3 py-2 sm:text-base rounded-md border-2 border-emerald-500 bg-emerald-700 hover:border-purple-500 hover:bg-purple-950 mt-2">Enable 2fa</button>
-					<button id="disable-2fa" class="px-3 py-2 sm:text-base rounded-md border-2 border-red-500 bg-red-700 hover:border-purple-500 hover:bg-purple-950 mt-2">Disable 2fa</button>
-					<button id="closeUserInfoEditor" class="px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mb-2 mt-6 mx-auto">Close</button>
+					<button id="enable-2fa" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-emerald-500 bg-emerald-700 hover:border-purple-500 hover:bg-purple-950 mt-2">Enable 2fa</button>
+					<button id="disable-2fa" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-red-500 bg-red-700 hover:border-purple-500 hover:bg-purple-950 mt-2">Disable 2fa</button>
+					<button id="closeUserInfoEditor" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mb-2 mt-6 mx-auto">Close</button>
 				</dialog>
 				<dialog class="modal animate-rainbow" id="2FAModal">
 					<div id="2fa-instructions" class="text-left my-6 mx-auto">
@@ -53,7 +53,7 @@
 							<li>Scan the QR code displayed above with your authenticator app.</li>
 						</ol>
 					</div>
-					<button id="close2FAModal" class="px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mb-2 mt-6 mx-auto">Close</button>
+					<button id="close2FAModal" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mb-2 mt-6 mx-auto">Close</button>
 				</dialog>
 				<img class="w-full max-w-xs h-auto" id="avatarImg" alt="User Avatar"/>
 			</div>
@@ -77,7 +77,7 @@
 				<h1 class="text-base sm:text-lg font-bold">Friend Search</h1>
 				<div>
 					<input type="text" id="search-input" placeholder="Search for username...">
-					<button id="search-button" class="px-3 py-2 sm:text-base rounded-md border-2 border-blue-500 bg-blue-700 hover:border-purple-500 hover:bg-purple-950 mt-2">Send Friend Request</button>
+					<button id="search-button" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-blue-500 bg-blue-700 hover:border-purple-500 hover:bg-purple-950 mt-2">Send Friend Request</button>
 				</div>
 			</div>
 		</div>
