--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -23,8 +23,8 @@
 				<dialog class="modal animate-rainbow" id="modal">
 					<h2>Update username, password or avatar</h2>
 					<form id="avatarForm" enctype="multipart/form-data">
-		 				<input type="file" id="avatarInput" accept="image/*" name="avatar" class="cursor-pointer w-full text-sm sm:text-base rounded-md border-2 border-gray-300">
-						<button type="submit" class="cursor-pointer w-full sm:w-auto px-3 py-2 text-sm sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Upload</button>
+		 				<input type="file" id="avatarInput" accept="image/*" name="avatar" class="cursor-pointer sm:text-base rounded-md border-2 border-gray-300">
+						<button type="submit" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Upload</button>
 					</form>
 					<form id="usernameForm">
 						<label>New username
