--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -25,25 +25,25 @@
 					<h2 class ="text-lg font-bold mb-2">Change avatar, username or password</h2>
 					<form id="avatarForm" enctype="multipart/form-data" class ="flex flex-col">
 						<label>Change avatar
-		 					<input type="file" id="avatarInput" accept="image/*" name="avatar" class="cursor-pointer w-full text-sm sm:text-base rounded-md border-2 px-1 border-gray-300">
+		 					<input type="file" id="avatarInput" accept="image/*" name="avatar" class="cursor-pointer w-full text-sm sm:text-base rounded-md border-2 px-3 py-2 border-gray-300">
 						<button type="submit" class="mb-3 w-full cursor-pointer px-3 py-2 text-sm sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Upload</button>
 					</form>
 					<form id="usernameForm" class ="flex flex-col">
 						<label>New username
 							<input type="text" id="newUsername"
 								placeholder="Enter new username" required
-								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500 px-1"></label>
+								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500 px-3 py-2"></label>
 						<button type="submit" class="mb-3 w-auto cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
 					</form>
 					<form id="passwordForm" class ="flex flex-col">
 						<label>New password
 							<input type="password" id="newPassword"
 								placeholder="Enter new password" required
-								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500 px-1"></label>
+								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500 px-3 py-2"></label>
 						<label>Confirm password
 							<input type="password" id="confirmPassword"
 								placeholder="Confirm new password" required
-								class="md:mt-1  sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500 px-1"></label>
+								class="md:mt-1  sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500 px-3 py-2"></label>
 						<button type="submit" class="mb-3 w-auto cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 mt-2">Submit</button>
 					</form> 
 					<button id="enable-2fa" class="cursor-pointer px-3 py-2 sm:text-base rounded-md border-2 border-emerald-500 bg-emerald-700 hover:border-purple-500 hover:bg-purple-950 mt-2">Enable 2FA</button>
