--- a/frontend/public/views/pong.html
+++ b/frontend/public/views/pong.html
@@ -11,11 +11,8 @@
     <canvas id="myCanvas" class="bg-black border-8 animate-rainbow w-[90vw] h-[80vh]"></canvas>
   </div>
 
-  <div class="flex justify-between items-end mt-4 text-sm sm:text-base">
-    <div id="scoreboard" class="bg-purple-950/60 p-2 rounded-md max-w-[50vw] font-bold">
-      <!-- depending on how many users, display username and score here -->
-    </div>
-    <!-- make button quit the game for all users and redirect to rooms page? -->
+  <div class="flex flex-row justify-end sm:justify-between items-center mt-4 text-sm sm:text-base gap-2 sm:gap-4">
+    <div id="scoreboard" class="bg-purple-950/60 px-3 py-2 rounded-md font-bold mb-4 sm:mb-0 sm:max-w-[50vw]"></div>
     <button id="quitButton" class="cursor-pointer px-3 py-2 sm:px-6 sm:py-4 rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950">Quit game</button>
   </div>
 </div>
