Fix close buttons not closing

--- a/frontend/public/views/matchmaking.html
+++ b/frontend/public/views/matchmaking.html
@@ -52,7 +52,7 @@
                 </dialog>
                 <dialog class="modal animate-rainbow" id="roomSettingsModal">
                     <h2>Customize the room</h2>
-                    <form onsubmit="" id="gameSettingsForm">
+                    <form id="gameSettingsForm">
                         <label>Game
                             <select name="game">
                                 <option value="pong" selected>Pong</option>
