fixed very small bug with not loading edit pencil when visiting existing but not accesible route

--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -18,7 +18,7 @@
 			<div class="grid grid-cols-2 items-center p-6">
 				<h1 id="username" class="text-base sm:text-lg"></h1>
 				<button id="openUserInfoEditor" class="cursor-pointer w-4 h-5 sm:w-5 sm:h-6 md:w-6 md:h-7">
-					<img class="w-full h-full object-contain" src="./assets/gifs/pencil.gif" alt="Edit username or password"/>
+					<img class="w-full h-full object-contain" src="/assets/gifs/pencil.gif" alt="Edit username or password"/>
 				</button>
 				<dialog class="modal animate-rainbow" id="modal">
 					<button id="closeUserInfoEditor" class="cursor-pointer fixed top-2 right-2" style="display: inline-block;">&#xD7;</button>
