--- a/frontend/public/views/matchmaking.html
+++ b/frontend/public/views/matchmaking.html
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 z-10">
-  			<img class="w-full max-w-xs h-auto" src="/assets/gifs/gerry.gif" alt="Gerry gif"/>
+  			<img class="w-full max-w-xs h-auto" src="/assets/gifs/gary.gif" alt="Gary gif"/>
 		</div>
     </div>
     <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="/assets/gifs/hellokitty.gif" alt="Hello kitty gif"/>
